Giao diện danh sách giảng viên

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
       height: 500px;
     }
     .right-component{
-      background-color:rgb(190 226 243);
+      background-color:white;
       margin-left: 10px;
       float: left;
       width: 68%;
@@ -108,30 +108,58 @@
             </div>
         </div>
         <div class="right-component col-8">
-          <div style="background-color: rgb(42, 104, 219); height: 50px;width: 98%;margin-left: 1%;border-radius: 3px;">
-            <h2 class=" text-center" style="padding-top: 10px;color: red;">SYSTEM TEACHER MANAGER</h2>
-          </div>
-          <div class="right-main">
-            <div style="background-color: rgb(89, 174, 253);color: rgb(19, 6, 133);margin-top: -10px;height: 40px;"><h4>Thông tin chung</h4></div>
-            <div style="background-color: white;margin-top:20px;">
-              <p style="float: left;margin-left: 5px;">Danh sách các trưởng khoa</p>
-              <a style="float: right;margin-right: 5px;">Xem danh sách</a>
-            </div>
-          </div>
-          <div class="right-main">
-            <div style="background-color: rgb(89, 174, 253);color: rgb(19, 6, 133);margin-top: -10px;height: 40px;"><h4>Hướng dẫn</h4></div>
-            <div style="background-color: white;margin-top:20px;">
-              <p style="float: left;margin-left: 5px;">Hướng dẫn lấy lại mật khẩu</p>
-              <a style="float: right;margin-right: 5px;">Xem chi tiết</a>
-            </div>
-          </div>
-          <div class="right-main">
-            <div style="background-color: rgb(89, 174, 253);color: rgb(19, 6, 133);margin-top: -10px;height: 40px;"><h4>Thông tin chung</h4></div>
-            <div style="background-color: white;margin-top:20px;">
-              <p style="float: left;margin-left: 5px;">Danh sách các trưởng khoa</p>
-              <a style="float: right;margin-right: 5px;">Xem danh sách</a>
-            </div>
-          </div>
+          <div><h3 class="text-center">Danh sách giảng viên</h3></div>
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Mã</th>
+                <th>Họ tên</th>
+                <th>Ngày sinh</th>
+                <th>Giới tính</th>
+                <th>Khoa</th>
+                <th>Học vị</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>DT2000IT</td>
+                <td>Nguyên Văn A </td>
+                <td>10-09-1983</td>
+                <td>Nam</td>
+                <td>CNTT</td>
+                <td>Tiến Sĩ</td>
+                <td><a>Chi tiết</a></td>
+              </tr>
+              <tr>
+                <td>DT2000IT</td>
+                <td>Nguyên Văn A </td>
+                <td>10-09-1983</td>
+                <td>Nam</td>
+                <td>CNTT</td>
+                <td>Tiến Sĩ</td>
+                <td><a>Chi tiết</a></td>
+              </tr>
+              <tr>
+                <td>DT2000IT</td>
+                <td>Nguyên Văn A </td>
+                <td>10-09-1983</td>
+                <td>Nam</td>
+                <td>CNTT</td>
+                <td>Tiến Sĩ</td>
+                <td><a>Chi tiết</a></td>
+              </tr>
+              <tr>
+                <td>DT2000IT</td>
+                <td>Nguyên Văn A </td>
+                <td>10-09-1983</td>
+                <td>Nam</td>
+                <td>CNTT</td>
+                <td>Tiến Sĩ</td>
+                <td><a>Chi tiết</a></td>
+              </tr>
+            </tbody>
+          </table>
         </div>
 
     </div>
